zeroed padding and margins to correct layout issue

--- a/vocab_app/client/public/css/main.css
+++ b/vocab_app/client/public/css/main.css
@@ -4,7 +4,7 @@ body {
   font-family: Roboto;
   color: dark-blue;
   font-style:normal;
-  font-size: 18px;
+  font-size: 24px;
   color:#1f295c
   background-color: #c7c8c7;
 
